# axum-playground

./: Cargo.toml  README.md  docker-compose.yml
db/: postmaster.pid
db/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
db/base/16384/: 2619  pg_internal.init
db/base/16385/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13454  13454_fsm  13454_vm  13458  13459  13459_fsm  13459_vm  13463  13464  13464_fsm  13464_vm  13468  13469  13469_fsm  13469_vm  13473  16386  16392  16407  16408  16417  16424  174  175  2187  2228  (+211 more)
db/base/4/: 2619
db/base/5/: pg_internal.init
db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
db/pg_stat/: pgstat.stat
db/pg_xact/: 0000
migrations/: 20260206081032_create_todo_table.sql  20260206104203_add_auto_update_for_update_at_timestamp.sql
src/: custom_middleware.rs  errors.rs  extractors.rs  logger.rs  main.rs  response.rs  todo_routes.rs  user_routes.rs  web_socket.rs
src/routes/: mod.rs  todo_routes.rs  user_routes.rs
templates/: layout.jinja
tests/: test.rs
