[package]
name = "axum-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower = "0.5.3"

[dev-dependencies]
http-body-util = { version = "0.1.3", features = ["full"] }