[package]
name = "axum-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "migrate", "macros", "uuid", "chrono"] }
tower = "0.5.3"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
dotenv = "0.15.0"
axum-extra = { version = "0.12.5", features = ["cookie"] }

[dev-dependencies]
http-body-util = { version = "0.1.3", features = ["full"] }